[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/promotion_scene/PromotionScene.gd" type="Script" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]

[node name="PromotionScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = -72.5
margin_right = 267.5
margin_bottom = 72.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BishopButton" type="Button" parent="Popup"]
margin_left = 15.0
margin_top = 15.0
margin_right = 130.0
margin_bottom = 130.0
text = "Bishop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorseButton" type="Button" parent="Popup"]
margin_left = 145.0
margin_top = 15.0
margin_right = 260.0
margin_bottom = 130.0
text = "Horse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerButton" type="Button" parent="Popup"]
margin_left = 275.0
margin_top = 15.0
margin_right = 390.0
margin_bottom = 130.0
text = "Tower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueenButton" type="Button" parent="Popup"]
margin_left = 405.0
margin_top = 15.0
margin_right = 520.0
margin_bottom = 130.0
text = "Queen"
__meta__ = {
"_edit_use_anchors_": false
}
